# rag-with-my-base

./: .gitignore  LICENSE  README.md  pyproject.toml
ai/: main.py
core/: config.py  vector_store.py
notebooks/: working_with_ai.ipynb
parser/: vectorize.py
parser/arxiv/: main.py
parser/wiki-sites/: main.py
